# doomarena-iot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  README.md  WORKPLAN.md  config.yaml  context.md  dev2_workplan.md  docker-compose.yml  plan.md  pyproject.toml
agent/: Dockerfile  agent.py  tools.py
attacks/: a1_compromised.py  a2_injection.py  a3_dos.py  a4_coordinated.py  mqtt_gateway.py
common/: env.py  llm_client.py  mqtt_transport.py  schemas.py
dashboard/: Dockerfile  dashboard.py
defense/: Dockerfile  llm_judge.py
docs/superpowers/plans/: 2026-06-11-dev1-core-evaluation.md
docs/superpowers/specs/: 2026-06-11-dev1-core-evaluation-design.md
harness/: metrics.py  run_experiments.py  visualize.py
ingest/: Dockerfile  ingest.py
mosquitto/config/: mosquitto.conf
sensors/: Dockerfile  sensor_sim.py
tests/: test_agent.py  test_attacks.py  test_dashboard.py  test_env.py  test_gateway.py  test_ingest.py  test_llm_client.py  test_llm_judge.py  test_metrics.py  test_mqtt_transport.py  test_schemas.py  test_tools.py
